--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>commit 1 branche master</h1>a
+    <h1>commit 1 branche master</h1>
+    <h1>commit 2 branche master</h1>
 </body>
 </html>
