--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>commit 1 branche master</h1>
     <h1>commit 2 branche master</h1>
+    <h1>commit 3 branche master</h1>
+    
 </body>
 </html>
